<resources>
    <string name="app_name">ComposeInstagram</string>
    <string name="username_textfield_hint">Phone number, email or username</string>
    <string name="cd_instagram_logo">Instagram Logo</string>
    <string name="password_textfield_hint">Password</string>
    <string name="logein">Log In</string>
    <string name="login_failed">Login Failed!</string>
    <string name="your_story">Your Story</string>
    <string name="view_all_comments">View all %s comments</string>
</resources>